# servicedesk

backend/notification-service/: README.md  pyproject.toml
backend/notification-service/app/routers/: email.py
backend/notification-service/app/schemas/: email.py
backend/notification-service/app/tasks/: email.py
backend/rag-service/: Dockerfile  README.md  pyproject.toml
backend/rag-service/app/config/: chroma_config.py  chroma_db_config.py  gigachat_api_config.py  gunicorn.conf.py  sgi_config.py
backend/rag-service/app/gigachat/: embeddings_func.py
backend/rag-service/app/middlewares/: cors.py
backend/rag-service/app/prompts/: local_patent_prompts.py
backend/rag-service/app/routers/: chroma_router.py
backend/rag-service/app/schemas/: __init__.py  embedding_request.py  save_data_request.py  search_request.py
backend/rag-service/app/utils/: chroma_utils.py  rag_utils.py
backend/user-service/: .gitignore  Dockerfile  PERMISSIONS.md  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
backend/user-service/alembic/: env.py
backend/user-service/alembic/versions/: 2024_10_24_0838-e2e4393da5b0_first_migration.py  2024_10_24_1032-baf3d6222b84_срchange_role_tabel.py  2024_10_24_1034-3100c2e78d69_add_permission.py
backend/user-service/app/config/: __init__.py  db_config.py  gunicorn.conf.py  sgi_config.py
backend/user-service/app/db/: db_helper.py
backend/user-service/app/middleware/: cors.py
backend/user-service/app/routers/: user_router.py
backend/user-service/app/schemas/: user.py
frontend/: package-lock.json  (+1 more)
(+35 files in other folders)
