[tool.poetry]
name = "rag-service"
version = "0.1.0"
description = ""
authors = ["Egor Sidorov <sidorov.egor.main@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
chromadb = "^0.5.11"
pydantic = "^2.9.2"
langchain = "^0.3.1"
pydantic-settings = "^2.5.2"
transformers = "^4.45.1"
sentence-transformers = "^3.1.1"
langchain-community = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
